--- a/paper/main.tex
+++ b/paper/main.tex
@@ -50,7 +50,7 @@
 \maketitle
 
 \begin{abstract}
-    We investigate the behavior of numerical optimization schemes employed to find local minima of nonlinear energy functionals. Our focus is on one-dimensional phase-field fracture models of brittle thin films on an elastic foundation.  Despite their inherent simplicity, allowing for analytical predictions, these models reveal a complex equilibrium landscape with multiple local minima providing an ideal case for assessing the efficacy of numerical solution algorithms. Through an exploration of  line-search-based descent algorithms  reliant on the approximative Hessian of the functional, our study sheds light on their efficacy in detecting branch-switching events among different equilibrium branches.
+    We investigate the behavior of numerical optimization schemes employed to find local minima of nonlinear energy functionals. Our focus is on one-dimensional phase-field fracture models of brittle thin films on an elastic foundation.  Despite their inherent simplicity, allowing for analytical predictions, these models reveal a complex equilibrium landscape with multiple local minima providing an ideal case for assessing the efficacy of numerical solution algorithms. Through an exploration of  line-search-based descent algorithms relying on the approximate Hessian of the energy functional, our study sheds light on their efficacy in detecting branch-switching events among different equilibrium branches.
 \end{abstract}
 
 % \listofchanges[style=list, title=Changes]
