--- a/paper/incl_conclusion.tex
+++ b/paper/incl_conclusion.tex
@@ -2,7 +2,7 @@
 
 \section{Conclusion} 
 
-\added[id=ALB]{Capturing branch switching phenomena across stability transitions is not an automatic feature of approximate numerical methods. Because they rely on approximate information about the Hessian of the energy functional, these methods do not guarantee to systematically detect transitions between local minima when stability is lost. 
+\added[id=ALB]{Capturing branch switching phenomena across stability transitions is not an automatic feature of approximate numerical methods. They rely on approximate information about the Hessian of the energy functional, as a consequence these methods do not guarantee to systematically detect transitions between local minima when stability is lost. 
 Indeed, this requires a careful determination of the zero-eigenmodes that render singular the exact nonlinear Hessian, which is typically not available in general purpose first order numerical algorithms.
 In practice, without such information, critical loads for equilibrium transitions become algorithm-dependant and are not consistent with closed-form solutions of the exact evolution problem.
 % 
