plots and minor

--- a/paper/incl_model.tex
+++ b/paper/incl_model.tex
@@ -243,13 +243,12 @@ From the numerical standpoint, the bifurcation eigen-problem in the vector space
 In this way, the space of perturbation allows for (small) perturbations $\beta$ which can be negative where $\alpha_t(x)>\alpha_-(x)$. Despite the constraint, such space is still a vector space, and the stability problem can be solved by standard methods of linear algebra.
 % Consequently, without modyfing the vector structure space of perturbations.
 
-\section{Model: thin film  on \replaced[id=ALB]{a compliant}{non-stiff}  substrate }
+\section{Model: thin film  on {a compliant} substrate }
 \label{sec:non-rigid}
-
 Now, we examine a scenario where the foundation is not entirely rigid and can undergo non-uniform deformations. The energy functional of the second model incorporates an extra term describing the elasticity of the substrate. \added[id=ALB]{Here the state of the system is identified by the triplet $(u, \alpha, u_s)=: y$.}, the energy is defined as follows
 \begin{equation}
 \label{model_elastic_substrate}
-\Psi(\alpha, u,u_s) = \int_{0}^1 \left[ \frac{1}{2} \ g(\alpha)(u')^2 + h(\alpha) + \frac{\lambda_1^2}{2}(\alpha')^2 
+\widetilde{\Psi}(\alpha, u,u_s) = \int_{0}^1 \left[ \frac{1}{2} \ g(\alpha)(u')^2 + h(\alpha) + \frac{\lambda_1^2}{2}(\alpha')^2 
 + \frac{1}{2 \lambda_2^2} (u-u_s)^2 
 + \frac{r_{s}}{2}  \epsilon_{\rm s}^2 \right] dx,
 \end{equation}
