--- a/paper/incl_numerics.tex
+++ b/paper/incl_numerics.tex
@@ -8,7 +8,9 @@ We now switch to the study of  the nonlinear\comment[id=ALB]{Let's clarify our u
 
 In order to find the equilibrium branches we make use of a pseudo-arclength continuation technique implemented in the software AUTO~\cite{Doedel1981-sa}. It solves the nonlinear equations \ref{auto1} and \ref{auto2} in the case of rigid and compliant foundation, respectively, with the relative end displacement $\bar\epsilon$ treated as a continuation parameter. To discretize the boundary-value problem, it uses collocation with Lagrange polynomials, and in our simulations we had $N=300$ mesh points with $N_c = 5$ collocation nodes and activated mesh adaptation. 
 \begin{figure}
-\includegraphics[scale=0.1]{./final_images/fig2.pdf}
+% \includegraphics[scale=0.1]{./final_images/fig2.pdf}
+\includegraphics[width=.8\textwidth]{../images/model_stiff_energy.pdf}
+\includegraphics[width=.7\textwidth]{../images/model_stiff_fields.pdf}
     \caption{
 % \todo[inline]{Add marker for $\ep_c$ in a), }
 Equilibrium branches in the phase-field model of an elastic bar on rigid elastic foundation: (a) the energy difference $\Delta E$ between the affine and non-affine configurations. Stability of solutions is indicated by colors: blue denotes stability, while green indicates instability   via the numerical evaluation of the smallest eigenvalue of the stiffness matrix $\mathbf{K}^1$. Arrows indicate the anticipated branch switching events associated with the loss of stability; (b) the damage and strain profiles of the minimum energy configurations on each branch.}
@@ -27,9 +29,13 @@ $
 u(\mathbf{x}) \approx u_{\text{FE}} (\mathbf{x}) := \sum_{i=1}^{n_u} \mathcal{N}^{(u)}_i(\mathbf{x}) u_i $
 and $\alpha(\mathbf{x}) \approx \alpha_{\text{FE}} (\mathbf{x}) := \sum_{i=1}^{n_\alpha} \mathcal{N}^{(\alpha)}_i (\mathbf{x}) \alpha_i 
 $
-where $\mathcal{N}^{(u)}(\mathbf{x}) $ and $\mathcal{N}^{(\alpha)}(\mathbf{x}) $ are the finite element basis functions and  $u_h$ and  $\alpha_h$ are nodal values for the displacement and damage fields, respectively. We used quadratic one-dimensional finite elements with 3 nodes  whose   shape functions   ${\mathcal N}_i(x)$ at a node $i$  are given by ${\mathcal N}_1(\xi)=-0.5\xi(1-\xi)$, ${\mathcal N}_2(\xi)=-0.5\xi(1+\xi)$ and ${\mathcal N}_3(\xi)=-(1-\xi)(1+\xi)$, where $\xi$ is the isoparameteric coordinate. The discrete solution $u(x_i)$ provided at discrete nodes $x_i$ by AUTO was first interpolated using B-spline basis functions of degree 3 \cite{Grimstad2016-cq}, and then utilized to calculate the integrals \eqref{hessian22} and   \ref{hessian222} employing a three-point Gauss integration scheme. The fixed boundary conditions were enforced by removing the rows and columns corresponding to $x = 0$ and $x = 1$ from the stiffness matrices $\mathbf{K}^i, i = 1, 2$. The explicit form of the stiffness matrix for the stiff substrate model is given by
+where $\mathcal{N}^{(u)}(\mathbf{x}) $ and $\mathcal{N}^{(\alpha)}(\mathbf{x}) $ are the finite element basis functions and  $u_h$ and  $\alpha_h$ are nodal values for the displacement and damage fields, respectively. We used quadratic one-dimensional finite elements with 3 nodes  whose   shape functions   ${\mathcal N}_i(x)$ at a node $i$  are given by ${\mathcal N}_1(\xi)=-0.5\xi(1-\xi)$, ${\mathcal N}_2(\xi)=-0.5\xi(1+\xi)$ and ${\mathcal N}_3(\xi)=-(1-\xi)(1+\xi)$, where $\xi$ is the isoparameteric coordinate. The discrete solution $u(x_i)$ provided at discrete nodes $x_i$ by AUTO was first interpolated using B-spline basis functions of degree 3 \cite{Grimstad2016-cq}, and then utilized to calculate the integrals \eqref{hessian22} and   \ref{hessian222} employing a three-point Gauss integration scheme. The fixed boundary conditions were enforced by removing the rows and columns corresponding to $x = 0$ and $x = 1$ from the stiffness matrices 
+% $\mathbf{K}^i, i = 1, 2$
+${\bf K}$ and $\widetilde{\bf K}$. The explicit form of the stiffness matrix for the stiff substrate model is given by
 \begin{equation}
-{\bf K}^1=\begin{bmatrix}
+    {\bf K} = 
+    % {\bf K}^1=
+    \begin{bmatrix}
 \int_0^1[ \frac{1}{\lambda_2^2}{\mathcal N}_i{\mathcal N}_j + (1-\alpha)^2{\mathcal N}'_i{\mathcal N}'_j
 %+\frac{1}{\lambda_2^2}{\mathcal N}_i {\mathcal N}_j
 ] dx&
@@ -42,8 +48,10 @@ where $\mathcal{N}^{(u)}(\mathbf{x}) $ and $\mathcal{N}^{(\alpha)}(\mathbf{x}) $
 and in the compliant substrate model it reads
 
 \begin{equation}
-{\bf K}^2=\begin{bmatrix}
-\int_0^1[ \frac{1}{\lambda_2^2}{\mathcal N}_i{\mathcal N}_j + (1-\alpha)^2{\mathcal N}'_i{\mathcal N}'_j] dx&
+    \widetilde{{\bf K}}=
+    % /{\bf K}^2=
+    \begin{bmatrix}
+    \int_0^1[ \frac{1}{\lambda_2^2}{\mathcal N}_i{\mathcal N}_j + (1-\alpha)^2{\mathcal N}'_i{\mathcal N}'_j] dx&
 -2\int_0^1(1-\alpha)u' {\mathcal N}'_i {\mathcal N}_j  dx&
 -\int_0^1[\frac{1}{\lambda_2^2}{\mathcal N}_i {\mathcal N}_j]  dx\\
 
@@ -60,8 +68,10 @@ and in the compliant substrate model it reads
 Our objective is to establish a branch switching strategy as part of our model's dynamic expansion\comment[id=ALB]{Unclear}. This extension must ensure the system's re-stabilization following an instability in a dissipative manner. In a quasi-static scenario, it should involve the selection of a new locally stable equilibrium branch with inherently lower energy.  Considering applications in structural mechanics, our approach to selecting the new equilibrium branch involves utilizing a criterion of local energy minimization (LEM)\comment[id=ALB]{Acronyms, imho, make it harder to read by requiring extra mental buffer.}  which emulates the zero viscosity limit of overdamped viscous dynamics. This approach disregards the global energy minimizing (GEM) strategy, which may be relevant in biomechanical applications~\cite{Salman2021-mn}. According to LEM protocol, during quasi-static loading, the system will remain in a metastable state (a local minimum of energy) until it becomes unstable. Subsequently, during an isolated switching event, the new equilibrium branch will be chosen using a descent algorithm \cite{Puglisi2005-lg}.
 \begin{figure}
     %\centering
-\includegraphics[scale=0.1]{./final_images/fig3.pdf}
-    \caption{
+% \includegraphics[scale=0.1]{./final_images/fig3.pdf}
+\includegraphics[width=.8\textwidth]{../images/model_compliant_energy.pdf}
+\includegraphics[width=.7\textwidth]{../images/model_compliant_fields.pdf}
+\caption{
 \todo[inline]{
     Add marker for $\ep_c, H$ in Fig (a)
     Add marker for $n=1, 2, ...$ in Fig (a)
@@ -94,7 +104,9 @@ Quasi-Newton methods are highly suitable for solving the phase-field equation of
 In  this study, it is worth to note that our primary objective is not to provide a comprehensive assessment of quasi-Newton methods on a global scale. Instead, our focus lies in scrutinizing their behavior and performance specifically concerning equilibrium branch selections within our simplified framework, where all branches are readily identified. By narrowing our scope to this specific aspect, we aim to gain insights into the effectiveness and reliability of quasi-Newton methods in reaching the equilibrium states of our system.
 \begin{figure}
     %\centering
-\includegraphics[scale=0.13]{./final_images/fig4.pdf}
+% \includegraphics[scale=0.13]{./final_images/fig4.pdf}
+\includegraphics[width=.7\textwidth]{../images/model_stiff_energy_kick.pdf}
+\includegraphics[width=.4\textwidth]{../images/model_stiff_profiles.pdf}
     \caption{
 % \todo[inline]{Add marker for $\ep_c, H$ in Fig (a) and (b)}
 Quasi-static loading simulations with L-BFGS: (a) the energy difference $\Delta E$, between he quasi-Newton solutions (gray dashed line) and the homogeneous solutions are superimposed onto equilibrium branches (red); (b) smallest eigenvalue of the second variation  as a function of the loading parameter $\bar\epsilon$; inset show damage profiles.}
@@ -103,11 +115,15 @@ Quasi-static loading simulations with L-BFGS: (a) the energy difference $\Delta 
 
 To proceed further, we recall that quasi-Newton algorithms only evaluate the function value and its gradient to reach equilibrium configurations. This implies that in our case, we need to evaluate integrals \eqref{modeld} and \eqref{model_elastic_substrate}, along with their first variations given by \eqref{firstvar1} and \eqref{firstvar}, in the first and second models, respectively. We   discretized the integrals \eqref{firstvar1} and \eqref{firstvar} to construct the residuals vectors using finite elements to obtain 
 \begin{equation}
-{\bf R}^1=\int_0^1 [(1-\alpha)^2u'\mathcal{N}'_i+\frac{1}{\lambda_2^2} (u-u_0) \mathcal{N}_i+\frac{1}{2}(u'^2 g'(\alpha)+h'(\alpha))\mathcal{N}_i+\lambda_1^2\alpha'\mathcal{N}'_i ]dx,\label{residual1}
+    {\bf R} =
+    %  {\bf R}^1=
+     \int_0^1 [(1-\alpha)^2u'\mathcal{N}'_i+\frac{1}{\lambda_2^2} (u-u_0) \mathcal{N}_i+\frac{1}{2}(u'^2 g'(\alpha)+h'(\alpha))\mathcal{N}_i+\lambda_1^2\alpha'\mathcal{N}'_i ]dx,\label{residual1}
 \end{equation}
 in the stiff model and 
 \begin{equation}
-{\bf R}^2=\int_0^1 [(1-\alpha)^2u'\mathcal{N}'_i+\frac{1}{\lambda_2^2} (u-u_s) \mathcal{N}_i+\frac{1}{2}(u'^2 g'(\alpha)+h'(\alpha))\mathcal{N}_i+\lambda_1^2\alpha'\mathcal{N}'_i +r_su_s'\mathcal{N}_i]dx\label{residual2}.
+    \widetilde{{\bf R}}= 
+    % {\bf R}^2=
+    \int_0^1 [(1-\alpha)^2u'\mathcal{N}'_i+\frac{1}{\lambda_2^2} (u-u_s) \mathcal{N}_i+\frac{1}{2}(u'^2 g'(\alpha)+h'(\alpha))\mathcal{N}_i+\lambda_1^2\alpha'\mathcal{N}'_i +r_su_s'\mathcal{N}_i]dx\label{residual2}.
 \end{equation}
 in the compliant substrate model. 
 
@@ -131,7 +147,8 @@ where $(\mathbf{B}^{(k)})^{-1}$ approximates the inverse of the Hessian matrix  
 Among quasi-Newton schemes, the L-BFGS method is widely regarded as one of the most efficient and well-suited for large-scale problems due to its limited and user-controlled storage requirements. This method relies on constructing an approximation of the inverse Hessian matrix, leveraging curvature information solely from recent iterations. Note also that the update formula for the approximative in successive minimization steps depends on the adapted algorithm. These algorithms are extensively used in the literature, and we refer the reader to the references for a more detailed description~\cite{Matthies1979-gl,Xu2001-ax,Nocedal1999-zr,Nocedal2006-qh,Simone2012-tx,Lewis2013-eu,Curtis2015-wp}. However, quasi-Newton methods do present certain drawbacks, notably slow convergence for ill-conditioned problems, particularly when the eigenvalues of the Hessian matrix are widely dispersed~\cite{Simone2012-tx}.
 \begin{figure}
     %\centering
-\includegraphics[scale=0.23]{final_images/fig5.pdf}
+    \includegraphics[width=.7\textwidth]{../images/model_compliant_energy_kick.pdf}
+    \includegraphics[width=.4\textwidth]{../images/model_compliant_profiles.pdf}
     \caption{
         \todo[inline]{Add marker for $\ep_c, H$ in Fig (a) and (b),
         add $n=3, 4, ...$ in Fig (a),
@@ -143,25 +160,41 @@ Among quasi-Newton schemes, the L-BFGS method is widely regarded as one of the m
 
 
 In our numerical experiments, we employ the BFGS and L-BFGS solvers from the Python SciPy library~\cite{2020SciPy-NMeth} and the Alglib library~\cite{Bochkanov2013-lk}. These solvers utilize the residual vectors (see \ref{residual1} and \ref{residual2}) at each finite element node, alongside the values of integrals \eqref{modeld} and \eqref{model_elastic_substrate}.
-\begin{figure}
-    %\centering
-\includegraphics[width=\textwidth]{./final_images/fig6.pdf}
+
+
+
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics*[width=.45\textwidth]{../images/model_stiff_kick_profiles.png}
+    \includegraphics*[width=.45\textwidth]{../images/model_compliant_kick_profiles.png}
     \caption{
-% \todo[inline]{Fix legend colours in (a)}
-Kick algorithm for the first model: (first column) the current unstable solution  for the damage field \added[id=ALB]{(blue)}, the \added[id=ALB]{eigenvector associated to the} smallest \replaced[id=ALB]{eigenvalue}{eigenvector} of this state \added[id=ALB]{(orange)}, and the perturbed damage field with this eigenvector \added[id=ALB]{(green)}; (second column)  the solution returned by the quasi-Newton algorithm wherein initial guess is taken to be the perturbed damage field.
- }
+        Profile of damage field showing the effect of the kick algorithm to transition from unstable to stable states. Branch switching events correspond to load values indicated by $\bar \epsilon_j$ with $j\in \mathbb N$ in Figure XXX, for the stiff substrate model (left column) and for the compliant substrate model (right column). %
+        In the figures, the light (orange) line indicates the unstable damage field $\alpha^*$, the eigenvector associated to the smallest eigenvalue, $p$, is displayed in green highlighting its positive and negative values, the dashed line represents the perturbed damage field  $\alpha^*+p$ used as initial guess for the state transition, the solid black line displays the solution $\alpha$ returned by the quasi-Newton algorithm after convergence.}
+    \label{fig:}
+\end{figure}
+
+
+
+% \begin{figure}
+%     %\centering
+% \includegraphics[width=\textwidth]{./final_images/fig6.pdf}
+%     \caption{
+% % \todo[inline]{Fix legend colours in (a)}
+% Kick algorithm for the first model: (first column) the current unstable solution  for the damage field \added[id=ALB]{(blue)}, the \added[id=ALB]{eigenvector associated to the} smallest \replaced[id=ALB]{eigenvalue}{eigenvector} of this state \added[id=ALB]{(orange)}, and the perturbed damage field with this eigenvector \added[id=ALB]{(green)}; (second column)  the solution returned by the quasi-Newton algorithm wherein initial guess is taken to be the perturbed damage field.
+%  }
     
-    \label{fig:kick}
-\end{figure}
+%     \label{fig:kick}
+% \end{figure}
 
 
-\begin{figure}
-    %\centering
-\includegraphics[width=\textwidth]{./final_images/fig7.pdf}
-    \caption{Kick algorithm for the second model: (first column) the current unstable solution  for the damage field, the smallest eigenvector of this state, and the perturbed damage field with this eigenvector; (second column)  the solution returned by the quasi-Newton algorithm wherein initial guess is taken to be the perturbed damage field.
- }
- \label{fig:kick2}
-\end{figure}
+% \begin{figure}
+%     %\centering
+% % \includegraphics[width=\textwidth]{./final_images/fig7.pdf}
+%     \caption{Kick algorithm for the second model: (first column) the current unstable solution  for the damage field, the smallest eigenvector of this state, and the perturbed damage field with this eigenvector; (second column)  the solution returned by the quasi-Newton algorithm wherein initial guess is taken to be the perturbed damage field.
+%  }
+%  \label{fig:kick2}
+% \end{figure}
 
 %To summarize, we initially provide the algorithms with an initial guess for $\mathbf{X}^{(k)} = (\mathbf{u}^{(k)}, \alpha^{(k)})$ at a fixed value of the loading parameter $\bar\epsilon$. Additionally, we specify an initial guess for the Hessian matrix, denoted as $\mathbf{B}^{k} \in \mathbb{R}^{n \times n}$. This matrix can either be set as the identity matrix or the uncoupled stiffness matrix to ensure a symmetric and positive definite approximation. Subsequently, the quasi-Newton algorithm computes a search direction using  the analogue of the Newton equation $\mathbf{B}^{(k)} \mathbf{p}^{(k)}  = -\mathbf{R}^{(k)} $,where $\mathbf{p}^{(k)}$ denotes the search direction at stage $k$. Afterwards, it  performs a line search to minimize a function $f(h^{(k)}) = f(\mathbf{X}^{(k)} + h^{(k)} \mathbf{p}^{(k)})$ in order to find an acceptable step size $h^{(k)}$ such that $h^{(k)} \in \arg \min_{h} f$. The solution is then updated in the direction of $\mathbf{p}^{(k)}$ with the step size $h^{(k)}$. 
 
@@ -234,6 +267,15 @@ small value of the step size \( \eta \) obtained by minimisation of \eqref{eqn:e
 To escape this region, one can design an iterative algorithm that repeatedly performs line searches in the current unstable direction until stability is found, iteratively flowing along the escape path. However, for the current problem, it was sufficient to take the step-size \( \eta=1 \) to escape the unstable critical states, even though this choice is suboptimal \replaced[id=ALB]{with respect to}{increases the function} \( f(\eta) \). 
 % Indeed, the essential feature of the quasi-Newton algorithm is the positive definiteness of the approximate Hessian, independent of the function's curvature (positive or negative). 
 The quasi-Newton solver starting from the perturbed state seeks a direction that will always be a descent direction. Therefore, a perturbed state obtained by taking a large step-size moves the system away from the flat region, allowing the quasi-Newton algorithm to find the next lower energy branch. It remains to be seen if this choice will work in other models or a more elaborated algorithm has to be implemented, as suggested above, which will be the subject of future work.
+\begin{figure}
+    %\centering
+    \includegraphics[width=.7\textwidth]{../images/model_stiff_energy_kick_algo.pdf} \\
+    \includegraphics[width=.7\textwidth]{../images/model_compliant_energy_kick_algo.pdf}
+    \caption{
+        % Quasi-static loading simulations with L-BFGS: (a) the energy difference $\Delta E$, between the quasi-Newton solutions and the homogeneous solutions are superimposed onto equilibrium branches (red); (b) smallest eigenvalue of the second variation  as a function of the loading parameter $\bar\epsilon$; (c) damage profiles.
+        }
+    \label{fig:tempo2}
+\end{figure}
 
 
 \subsection{\added[id=ALB]{Irreversibility and numerics} }
@@ -268,8 +310,8 @@ Despite the occurrence of negative eigenvalues for the bifurcation problem, the 
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics*[width=.45\textwidth]{../images/spectra-7f4361886184f3c6791fe16bf4f4b3f2.pdf}
-    \includegraphics*[width=.45\textwidth]{../images/spectra-zoom-7f4361886184f3c6791fe16bf4f4b3f2.pdf}
+    \includegraphics*[width=.7\textwidth]{../images/spectra-7f4361886184f3c6791fe16bf4f4b3f2.pdf}
+    \includegraphics*[width=.7\textwidth]{../images/spectra-zoom-7f4361886184f3c6791fe16bf4f4b3f2.pdf}
     \caption{Spectrum of the Hessian $\Psi''(y_t)$ at equilibrium for the rate bifurcation problem (circles) and irreversible stability problem (losanges), rescaled with respect to the minimum eigenvalue of the purely elastic phase at $\bar \epsilon = 0$. At load $\bar \epsilon_b$, the bifurcation problem is singular and the trajectory in phase space looses its uniqueness. 
     Corresponding to the gray shaded area, the detail of the inf-spectra are shown in the right figure. The transition from the uniqueness of the homogeneous branch to the existence of a multiplicity of equilibrium curves passing through the current homogeneous state is shown by the change of sign of the inf-eigenvalue and the existence of multiple negative eigenvalues. For $\bar \epsilon \geq \bar \epsilon_b$ multiple equilibrium paths cross the current state. The inf-eigenvalue of the stability problem in the restricted space $K^+_0$ is positive, indicating a sufficient condition for stability of the computed evolution. The tolerance for the numerical computation of the inf-eigenvalue is $10^{-6}$.}
     \label{fig:irreversibility}
