--- a/paper/incl_intro.tex
+++ b/paper/incl_intro.tex
@@ -74,4 +74,4 @@ We study of stability of equilibria in two settings, namely i) that in which dam
 
 The rest of the paper is organized as follows. In Sections \ref{sec:rigid} and \ref{sec:non-rigid}, we present one-dimensional phase-field fracture models with both rigid and non-rigid elastic foundations, focusing on the analysis  of linear stability regarding trivial solutions. In Section \ref{sec:numerics}, we investigate the nonlinear regime and discuss the selection of equilibrium branches using various numerical optimization algorithms. In the final Section  summarize our results.
 
-\paragraph{Notation.} \added[id=ALB]{Standard notation for Sobolev spaces, derivtives, indices, ..., subscripted $t$ means $t$-parametrised quantities, superscripted $k$ means $k$-th iterate of an iterative algorithm. States $y_t, X, X^*$, vectors, matrices, ...}
+\paragraph{Notation.} \added[id=ALB]{Standard notation for Sobolev spaces, derivtives, indices, ..., subscripted $t$ means $t$-parametrised quantities, superscripted $k$ means $k$-th iterate of an iterative algorithm. States $y_t, X, X^*$, vectors, matrices, ..., Sobolevs spaces of scalar functions on unit interval $H^1(0, 1)$}
