--- a/paper/incl_model.tex
+++ b/paper/incl_model.tex
@@ -1,289 +1,12 @@
 %!TEX root = main.tex
 \section{Model: thin film on stiff substrate}
 \label{sec:rigid}
-
-In this work, we consider the phase-field theory of fracture to describe the crack formation of {a thin elastic membrane} attached to a substrate. The evolution equation for the phase-field is determined by the minimization of an energy functional based on the variational theory of brittle fracture~\cite{bourdin:2008-the-variational}.
-In phase-field theories of fracture, elasticity of the brittle solid is usually assumed to be linear with a stiffness degrading with damage. The latter is described by a scalar order parameter which features in the total energy functional with one term that accounts for the energy dissipation associated to homogeneous damage, and with a term that is proportional to the square of its gradient which controls the energy cost of spatial damage variations.
-Suppose that the scalar damage variable $\alpha(x)$ is \replaced[id=ALB]{normalised such that}{with} $\alpha=0$ and $\alpha=1$ respectively correspond to the unbroken an fully broken states, \added[id=ALB]{and that the system's evolution is parametrised by a positive scalar control parameter, henceforth noted $t$, which can be thought of as a kinematic time and with respect to which loads are indexed}. We can write the energy of the system in the \added[id=ALB]{nondimensional} form\comment[id=ALB]{Suggest: a hint on nondimensional rescalings}
-\begin{equation}
-\label{modeld}
-\Psi(\alpha, u) = \int_{0}^{1} \left[ \frac{1}{2} \ g(\alpha)(u')^2 
-+ \frac{1}{2 \lambda_2^2} (u-u^s)^2
-+ h(\alpha) + \frac{\lambda_1^2}{2}(\alpha')^2 
- \right] dx,
-\end{equation}
-where $u(x)$ is the displacement field of the brittle membrane and 
-$\epsilon(x)=u'(x)$ the corresponding continuum strain variable, \added[id=ALB]{$\lambda_1, \lambda_2$\comment[id=ALB]{Notation: $\ell, \ell_1$} are two nondimensional lengthscales. The former identifies the peak material stress in a one dimensional test as well as the typical scale of the damage localisation bands. The latter, quantifies the film's stiffness relative to the substrate}. 
-\added[id=ALB]{Denoting by $H^1((0, 1))$ the space of scalar functions defined on the unit interval which are square integrable and have square integrable first derivatives, the energy $\Psi$ is finite for pairs $(u, \alpha)$ laying in the Cartesian product space $V:=H^1((0,1))\times  H^1((0,1))$ (a vector space).}
-We \replaced[id=ALB]{specify the material model by choosing constitutive functions}{make the standard assumptions for constitutive functions}  $g(\alpha) =(1-\alpha)^2$ and $h(\alpha) =\alpha^2$ and thus our model corresponds to the  phase field fracture model referred to as the Ambrosio and Tortorelli (AT2) model in \cite{Bourdin2000-pc,Miehe2010-sj,Miehe2010-ja}. 
-We also choose the boundary conditions in the form: $u(0)=-\bar\epsilon_t/2$, $u(1)=\bar\epsilon_t/2$ and we impose the displacement field  of the substrate as \added[id=ALB]{a loading mode parametrised by $t$,} $u^s(x, t)=\bar \epsilon_t/2 (2x-1)$, where $\bar \epsilon_t = \bar \epsilon t$ describes a monotonic loading history.
-\added[id=ALB]{
-Optimality conditions defining our problem are derived from the
-intuitive idea that a state is observable if and only if it is stable, and in turn, a state is stable only if it is a local minimum of the energy among admissible perturbations. As a consequence, a stable evolution during the loading interval $t\in [0, T]$ is one parametrised mapping such that, for all $t\in [0, T]$ the state $y_t$ is a local energy minimum among all admissible state perturbations. In practice, given an initial condition $y_0$ at $t=0$ we seek a state $y_t:=(u, \alpha)_t$ that, for a given value of the control parameter $t$, satisfies time-dependent kinematic boundary conditions on the displacement variable and is locally energy minimal. For definiteness, we seek $y_t\in X_t = \{v\in H^1((0, 1)):v=u^s(x, t),\ x\in \{0, 1\}\}\times H^1((0,1))$} such that
-\begin{equation}
-    \label{eq:variational_global_ineq}
-    \Psi(y_t) \leq \Psi(y_t + z),\quad \forall \text{ admissible } z.
-\end{equation}
-% 
-In the expression above $z$ is a state perturbation, its admissibility requires zero boundary conditions for the displacement component as well as additional constraints on its damage component when irreversibility is taken into account. 
-% Define $X_t = H^1((0, 1))$
-% Provided a given initial condition $y_0$ at $t=0$, the quasi-static, incremental, evolutionary problem we address is to find a parametrised map $t \mapsto y_t \in X_t$, such that~\eqref{eq:variational_global_ineq} is satisfied.
-Solutions to the incremental problem are sought by solving first and second order necessary conditions for optimality.
-
-\added[id=ALB]{An energy expansion for a generic admissible state $y$ in the vicinity the state $y_t$ reads}  
-$$
-\Psi(y)-\Psi(y_t)= \delta\Psi(y_t)(y-y_t)+\frac{1}{2}(y-y_t)^T \delta^2\Psi(y_t)(y-y_t)+o(\|y-y_t\|^2)
-    \label{eqn:energy-expansion}
-$$
-\added[id=ALB]{and is valid for any $y$ whose displacement component verifies kinematic boundary conditions and its damage component $\alpha$ is either unconstrained, or such that $\alpha\geq\alpha_t$ if irreversibility is taken into account.}
-% 
-The first order variation of the energy functional \added[id=ALB]{in the direction $(v, w)$} is given \added[id=ALB]{by the following linear form}  
-\begin{equation}
-    \delta \Psi(u,\alpha)(v,w)=\int_0^1
-\left[g(\alpha)u'v'+\frac{1}{\lambda_2^2} (u-u_0) v+ \left( \frac{1}{2}u'^2 g'(\alpha)+h'(\alpha) \right)  w+\lambda_1^2\alpha'w' \right]dx,\label{firstvar1}
-\end{equation}
-where $v$ and $w$ are scalar test functions. 
-% Note here that, because the damage field $\alpha$ is free from irreversibility constraits, both positive and negative  test functions  are admissible, thus equilibrium configurations necessarily satisfy the equality to zero of the first order variation of the energy functional. 
-By using standard arguments of the calculus of variations, we can localise the integral relation above to establish the strong (local) form of equilibrium conditions and proceed with the evaluation of the equilibrium configuration via the Euler-Lagrange equations
-\begin{eqnarray}
-    % \label{modeld_el_1}
-\begin{cases}
-  2(1-\alpha)\alpha' u' +(1-\alpha)^2 u'' -  \frac{1}{\lambda_2^2}(u-u^s) &= 0, \quad {x\in (0, 1)}\\
-  -\lambda_1^2\alpha'' - (1-\alpha)( u')^2 + 2\alpha   &= 0, \quad {x\in (0, 1)}
-\end{cases}
-\label{auto1}
-\end{eqnarray}
-\added[id=ALB]{
-    This differential system is equipped with kinematic (essential) boundary conditions $u(0) = u^s(0, t), u(1) = u^s(1, t)$ and natural conditions on the internal field $\alpha'(0)=\alpha'(1)=0$.
-When the order parameter is reversible, the space of admissible perturbations is the homogeneous space associated to $X_t$, that is $V_0:= H^1_0((0,1))\times  H^1((0,1))$.
-Notice that the choice of boundary conditions for displacements compatible with the substrate's deformation implies that the pair $(u_h(x), \alpha_h)$ given by $u_h(x)\equiv u^s(x, t)$\comment[id=ALB]{notation $
-\bar u_t$} and $\alpha_h$ a load-dependent constant to identify, is always a solution to the elastic equilibrium equations. This makes it immediate to identify the fundamental homogeneous solution branch $y_h$ and to decouple the elasticity problem from the  evolution of damage. 
-%  driving stress softening.
-}
-Therefore, solving~\eqref{auto1} for states such that $u''(x)=\alpha'(x)= 0, \, \forall x\in (0, 1)$ identifies the homogeneous solution $y_h = (u_h, \alpha_h)$ whose components read 
-\begin{equation}
-u_h(x) =  \bar \epsilon_t/2 (2x-1),\qquad\alpha_h = \frac{\Bar{\epsilon_t}^2}{2 + \Bar\epsilon_t^2}\label{eq:homo1}.
-\end{equation}
-% \comment[id=ALB]{notation $\bar \epsilon_t$}
-\added[id=ALB]{
-Notice that, by our choice to model the material through a quadratic term dissipation term $h(\alpha)$, damage necessarily starts as soon as $t>0$.}
-The effective \replaced[id=ALB]{total}{elastic} energy along the \replaced[id=ALB]{homogeneous}{trivial} branch reads  
-\begin{equation}
-    \label{eq:energy_homogeneous}
-    \Psi_h(\bar\epsilon) :=\Psi(\alpha_h, u_h) = \frac{\Bar{\epsilon}^2}{2 + \Bar\epsilon^2}
-\end{equation}\comment[id=ALB]{CHECK, looks like only homogeneous damage energy}
+ We can write the energy of the system in the \added[id=ALB]{nondimensional} form\comment[id=ALB]{Suggest: a hint on nondimensional rescalings}
 
 
-\subsection{Linear stability}
-\comment[id=ALB]{How to understand linear/nonlinear}
-An equilibrium configuration $y_t:=(u,\alpha)_t$ is a state such that the first variation $\delta \Psi(u,\alpha)\added[id=ALB]{(v, \beta)}$ vanishes for all admissible test fields \added[id=ALB]{in the vector space $V_0$}. 
-To assess the incremental stability of the homogeneous solution in the reversible (linear) case, we examine the \added[id=ALB]{positivity of the} second variation, requiring\comment[id=ALB]{Notation suggestion: $w\mapsto \beta, y:=(u, \alpha), z:=(v, \beta)$}
-\begin{equation}
-\delta^2 \Psi(y_t)(v,w)>0, \qquad  \forall (v,w)\in V_0,
-\label{eqn:linear_second_order_stability}
-\end{equation} 
- \added[id=ALB]{The second directional derivative of the energy is given by the following bilinear form} \deleted[id=ALB]{as expressed by the following equation}:
-\begin{equation}
-\delta^2 \Psi(u,\alpha)(v,w)=\int_0^1 \left[(1-\alpha)^2v'^2 
-+\frac{1}{\lambda_2^2} v^2 \right]dx
-%+ \lambda_2^{-2}v^2
-- 4(1-\alpha)u' v'w+(2+ u'^2)w^2+\lambda_1^2w'^2, 
-\label{hessian22}
-\end{equation}
-% \comment[id=ALB]{notation $w\mapsto \beta$} 
-which is well defined for perturbations $(v, w)\in V_0$.
-{We} extract information on the onset of instability by seeking a solution given by a Fourier series expansion of the fields $v$ and $w$ in \eqref{hessian22}, such that $v(x)=\sum_{n=1}^{\infty} a_{n} \sin \left(n \pi x+\phi_{n}\right), \quad w(x)=\sum_{n=1}^{\infty} b_{n} \cos \left(n \pi x+\psi_{n}\right)$. Then, we observe that, thanks to boundary conditions, $\psi_{n}=\phi_{n}=0$ for all natural $n$. The stability condition~\eqref{eqn:linear_second_order_stability}  takes the form:
-\begin{align}\left[ a_n \quad b_n \right] \mathcal{H} \left[ \begin{array}{c} a_n \\ b_n \end{array} \right]=\left[ a_n \quad b_n \right]\left(
-\begin{array}{cc}
-g(\alpha)(n\pi)^2+\lambda_2^{-2}  & \frac{\partial g}{\partial \alpha}\bar\epsilon(n\pi)  \\
-\frac{\partial g}{\partial \alpha}\bar\epsilon(n\pi)  &   \frac{\partial g^2}{\partial \alpha^2}\bar\epsilon^2+ \frac{\partial h^2}{\partial \alpha^2}+\lambda_1^2(n\pi)^2  \\
-\end{array}
-\right)\left[ \begin{array}{c} a_n \\ b_n \end{array} \right]>0.\label{hessian1}\end{align}
-% 
-By substituting the homogeneous solution $\alpha_h$ into \eqref{hessian1}, we compute $\det \mathcal{H}$ as a function of $\bar \epsilon$ and $n$, which is depicted in Figure~\ref{fig:hessian1}. The calculations are performed for the parameter values \replaced[id=ALB]{$\lambda_1=0.16$}{$\lambda_1=0.158114$} and $\lambda_2=0.34$.
-\added[id=ALB]{
-    % Interpretation of the image: 
-The figure represents, for a given load $\bar \epsilon$, the wavenumber $n(\bar \epsilon)\in \mathbb N$ of possible energy-decreasing damage bifurcations. For an increasing loading history $\bar \epsilon_t\nearrow$, the wavenumber is non monotonic.}
-In Fig. \ref{fig:hessian1}(a), the locus $\det \mathcal H=0$ forms closed loops, indicative of an elastic background's influence\comment[id=ALB]{Expand}. Notably, a re-entry behavior of the affine configuration is discernible, marked by the emergence of two critical strains denoted as $\bar\epsilon^*$ and $\bar\epsilon^{**}$, representing the lower and upper stability limits for the homogeneous state. These critical points are highlighted by red and green dots in Fig. \ref{fig:hessian1}(a). The critical wavenumber $n_c$ for the lower limit $n_c(\bar{\epsilon}^*)$    differs from the critical wavenumber for  upper limit $n_c(\bar{\epsilon}^{**})$. Finally, we remark that closed-form analytical solutions can be provided for the critical wavenumber and critical strains and the parametric dependence of the corresponding bifurcation thresholds can be obtained, as detailed in \cite{Salman2021-mn}.
 
-
-\begin{figure}
-     \centering
-     \includegraphics[scale=0.25]{./final_images/fig1.pdf}
-\caption{
-\todo[inline]{Add markers for $\bar \ep^{*}, \bar \ep^{**}$}
-Computation of the determinant $\det \mathcal{H}$ for the homogeneous solution $\alpha_h$, utilizing parameter values \replaced[id=ALB]{$\lambda_1=0.16$}{$\lambda_1=0.158114$} and $\lambda_2 = 0.34$. The computation is performed for two scenarios: (a) rigid foundation and (b) deformable foundation with the additional parameter $r_s=0.5$. The closed loops observed indicate a re-entry behavior for large deformations. Black dots mark bifurcation from the homogeneous solution while red and green dots highlight the emergence of critical strains $\bar{\epsilon}^*$ and $\bar{\epsilon}^{**}$, representing the lower and upper stability limits, respectively. The critical wavenumber $n_c$ for the lower limit $n_c(\bar{\epsilon}^*)$ differs from that for the upper limit $n_c(\bar{\epsilon}^{**})$.}
-     \label{fig:hessian1}
- \end{figure}
-
-
-\subsection{{\added[id=ALB]{Nonlinear stability (with irreversibility constraints)}}}
-
-\added[id=ALB]{
-Irreversibility can be introduced in the variational formulation of the evolution problem as a pointwise inequality constraint. Intuitively, irreversibility plays two distinct roles along an evolution: (i) it is a local constraint which prevents the damage field at a given location to decrease between two subsequent loads values, both during loading and unloading, and (ii) it restricts the space of admissible variations globally in such a way that \emph{negative} perturbations of the current damage state are no longer allowed, effectively changing the structure of the set of admissible perturbations from a vector space to a convex cone. 
-}
-\added[id=ALB]{
-To formulate irreversibility  we thus consider only non-decreasing damage evolutions that are sufficiently smooth with respect to the loading parameter, and seek maps $t\mapsto y_t = (u_t, \alpha_t)$ such that $\dot \alpha_t \geq 0$ and that satisfy the minimality condition~\eqref{eq:variational_global_ineq}.
-Because the current state can only be compared to those of with equal or higher damage, the space of admissible perturbations becomes the set $K^+_0:=H^1_0((0, 1))\times \{\beta \in H^1((0, 1)): \beta(x) \geq 0 \text{ a.e. }x\in (0, 1)\}$.
-By construction, such space is contained in the vector space of admissible unconstrained perturbations, namely $K^+_0\subseteq V_0$. Indeed, if $(v, \beta)\in K^+_0$, then $-(v, \beta) \in V_0$ but $-(v, \beta)\notin K^+_0$. This restriction has a profound impact on the variational characterisation of local minima and bears consequences on both for the first order (equilibrium) conditions and the second order (stability) problem.}
-% namely such that $\dot \alpha_t(x) \geq 0 \text{ a.e. } x\in (0, 1)$,
-\added[id=ALB]{Equilibrium states $y_t=(u_t, \alpha_t)$ of the irreversible system, are hence governed by the following (first order) necessary optimality conditions taking the form of a variational inequality}
-\begin{equation}
-    \label{eq:eq_variational_inequality_full}
-    \delta \Psi(y_t)(v-u^s, w-\alpha_t) \geq 0, \quad \forall
-    % \delta \Psi(y)(v-u, w-\alpha) \geq 0, \quad \forall
-    %  w -\alpha \in \{ w\in H^1(\Omega), w\geq 0\}
-\end{equation}
-% 
-which has to hold for all admissible competitor states $(v, \beta)$ such that $v-u^s \in H^1_0((0, 1))$ and $\beta\in H^1_0((0,1))$ with $\beta \geq \alpha_t$, which we succintly write as $(v-u^s, \beta - \alpha_t) \in K^+_{0}$. 
-% where $K^+_{t}:=u^s(t) + H^1_0((0, 1))\times\{w \in H^1((0, 1)): w(x) \geq \alpha_t(x) \text{ a.e. }x\in (0, 1)\}$ depends on the loading parameter $t$ both explicitly, in the definition of kinematic boundary conditions, and implicitly, through the pointwise damage irreversibility.
-% Notice tha
-By testing the elasticity problem for fixed damage, and the damage problem for a given displacement field, we obtain 
-\begin{equation}
-    \label{eq:variational_equilibrium} 
-    \delta \Psi(y_t)(v-u_t, 0) = 0, \qquad \delta \Psi(y_t)(0, w-\alpha_t) \geq 0, \qquad \forall (v-u_t, w-\alpha_t) \in K^+_{0}.
-\end{equation}
-
-\added[id=ALB]{
-The last two relations are, respectively, the weak form of the mechanical equilibrium conditions and the  law of evolution of the damage field.
-The former allows to compute the elastic equilibrium displacment $u_t$ which is thus eliminated from energy\comment[id=ALB]{miracle in 1d, expand}, while the latter governs the evolution of the damage field.
-Upon elimination of the kinematic field, the variational inequality~\eqref{eq:variational_equilibrium}.2 takes a particularly expressive form when written as a complementarity problem. This highlights the mechanical nature of the damage criterion as a threshold law.
-Namely, the strict convexity of the elastic model for given damage implies that~\eqref{eq:variational_equilibrium}.1 has a unique solution $u_t$. 
-Substituting in ~\eqref{eq:variational_equilibrium}.2 and accounting for the irreversibility constraint $\dot \alpha \geq 0$ we are led to seek a map $t\mapsto\alpha_t$ such that 
-}
-\added[id=ALB]{
-    \begin{equation}
-    \label{eq:complementarity}
-    \dot \alpha_t \geq 0 \qquad 
-     -\phi_t(\alpha_t) \geq 0 \qquad
-     \phi_t(\alpha_t)\dot \alpha_t = 0
-\end{equation}
-where $\phi_t$ is a scalar function associated to the variation of elastic energy density at the equilibrium, defined by $\delta \Psi(y_t)(0, \beta - \alpha) = \langle -\phi_t(\alpha), \beta - \alpha\rangle$. Here, the subscript $t$ indicates that this quantity is computed for the equilibrium $u_t$.
-%  Here, $\phi_t$ is the energy variation with respect to perturbations of the order parameter (from a given damage level $\alpha_t$) and is interpreted as an energy release rate. 
-Consequently, $\phi_t(0)$ is 
-% the total energy released by the system from its sound state
-the density of the energy variation at equilibrium for the undamaged structure, and all equilibrium solutions $y_t$ such that $-\phi_t(0) > 0$ belong to the interior of the damage yield surface for the sound structure. The equality $-\phi_t(0) = 0$, conversely, identifies the attainment of the damage criterion for the sound structure, or equivalently, that the state $y_t$ has reached, from the interior, the boundary of the (damage-dependent) elastic domain. The inequality $-\phi_t(\alpha_t) \geq 0$ states that the elastic energy release is either smaller than or equal to the (marginal) cost of damage, whereas the complementarity condition $\phi_t(\alpha_t)\dot \alpha_t = 0$ ensures that the damage field evolves only if the energy release rate is critical.
-The three conditions above, established as necessary first order condition for constrained optimality~\cite{Nocedal1999-zr}, encode the pointwise non-negativity of the damage rate, the boundedness of the elastic domain, and the complementarity between the attainment of the damage criterion and the conditions for the evolution of the internal order parameter. 
-}
-
-\added[id=ALB]{
-In the current one-dimensional setup with homogeneous initial conditions $y_0=(0, 0)$ and compatible kinematic boundary conditions, the existence of a homogeneous solution implies that the damage criterion is attained everywhere throughout the bar at the same load. This greatly simplifies the analysis of the energetic properties of the system. 
-Using the elastic solution $u_t = 2t(x-1/2)$ 
-% and denoting by $\delta \alpha:=w-\alpha_t$ an admissible damage perturbation,
- the inequality in~\eqref{eq:variational_equilibrium}.2 yields the following algebraic inequality
-\begin{equation}
-    \label{eq:variational_equilibrium_homogeneous}
-    0 \leq -\phi_t(\alpha_t)= -\frac{1}{2}t^2 g'(\alpha_t)-h'(\alpha_t)
-\end{equation}
-% \comment[id=ALB]{} 
-The equality in the last condition corresponds to the attainment a critical energy release rate whereby the elastic energy released (the negative quadratic term) equals (and drives) damage evolution.
-% We have $\delta \Psi(y_t)(0, \delta\alpha) =0, \, \forall \delta \alpha \geq 0$ only if
-% $$
-% \frac{1}{2}t^2 g'(\alpha_t)+h'(\alpha_t) = 0, \qquad \text{a.e. } x\in (0, 1).
-% $$
-The equality on the left hand side of \eqref{eq:variational_equilibrium_homogeneous} is an algebraic equation for $\alpha_t$ which identifies the evolution of the homogeneous damage response, as a function of the given loading level $t$.
-The investigation of the stability properties of critical energy states, i.e. equilibria, in the irreversible case requires  
-considering second order energy variations with respect to all admissible perturbations that render null the first order term in the energy expansion~\eqref{eqn:energy-expansion}.
-In the general case, this requires distinguishing between the regions where the damage criterion is attained, and thus damage can evolve, from the (complementary) domain where the second relation in~\eqref{eq:complementarity} is satisfied with a strict inequality, and thus damage cannot evolve.
-In our case, the existence of nontrivial homogeneous solutions simplifies the analysis because the damage criterion is attained everywhere, damage can increase throughout the whole domain, and the function space of admissible perturbations is defined on the fixed domain $(0, 1)$.
-} 
-
-% as the non-negativity of the hessian form on the constrained space of admissible perturbations is not guaranteed by the positive definiteness of the quadratic form on the homogeneous linear space generated by $K^+_0$.  
-
-
-\added[id=ALB]{
-Assume now that a state $y_t$ is known as a function of $t$ such that it solves~\eqref{eq:eq_variational_inequality_full}, and is sufficienty smooth so that the (right) derivative with respect to $t$ is well defined. 
-As $t$ varies, $y_t$ describes a (smooth) curve in the phase space identified by its right tangent vector $\dot y_t =: \lim_{\tau\to 0^+}\frac{y_{t+\tau} - y_t}{\tau}$.
-A fundamental question is to discern whether $y_t$ is an isolated equilibrium state tracing a unique evolution path, or conversely if it lays at the intersection of multiple equilibrium curves.
-% two curves can intersect transversally or tangentially, there is an an- gular or tangent bifurcation following from the fact that the tangent directions to these curves are different or not at a bifurcation point.multiplicity
-% The problem of finding all equilibrium curves going through a given equilibrium point is ... due to the nonlinearities of the problem. 
-% Restricting our attention to evolutions which are smooth with respect to the loading parameter $t$, 
-To this end, we can derive~\eqref{eq:eq_variational_inequality_full} with respect to $t$ to obtain a boundary value problem relating the rate of evolution $\dot y_t$ to the current state $y_t$, supposing the latter known, namely
-% 
-\begin{equation}
-    \label{eq:variational_bifurcation}
-    \text{find }\dot \zeta: \qquad \delta^2 \Psi(y_t)(\dot y_t,  \dot \zeta -\dot y_t) + \delta \dot \Psi(y_t)(\zeta-\dot y_t) \geq 0, \quad \forall \zeta -\dot y_t\in K^+_{0}
-\end{equation}
-% \comment[id=ALB]{explain the notation $K^+_{\dot y_t}$}
-where $\delta \dot \Psi$ is the time-derivative of the linear form corresponding to the first order energy variation.
-By construction, the homogeneous rate $\dot y_h$ is a solution of \eqref{eq:variational_bifurcation}, the question is whether another solution exists. The uniqueness is thus ensured by the positive definiteness of the quadratic form within the homogeneous linear space generated by $K^+_0$, namely $V_0$. 
-Thus, the non-bifurcation condition for the homogeneous evolution reads
-}
-% . The bifurcation problem is then governed by the following variational inequality
-% - The bifurcation problem which is established by derivation of the first order equilibrium problem [.]
-\begin{equation}
-    \label{eq:bifurcation_uniqueness}
-    \delta^2 \Psi(y_h)(\dot\zeta, \dot\zeta) > 0, \quad \forall \dot\zeta \in V_0 
-\end{equation}
-
-\added[id=ALB]{
-and formally coincides with the classical linear stability problem~\eqref{eqn:linear_second_order_stability} in the reversible case}. However, it has a different mechanical interpretation in terms of evolution rates and uniqueness of equilibrium branches.
-Remark that, in the general case in which the damage criterion is not attained everywhere, the space of admissible perturbations for the second order problem is $H^1_0((0, 1)) \times \{ \beta \in H^1((0, 1)) : \delta\Psi(y_t)(0, \beta) = 0 \}$. 
-The first load at which the bifurcation inequality~\eqref{eq:bifurcation_uniqueness} fails, namely $t_b:=\inf_t \{\delta^2 \Psi(y_h)(\zeta, \zeta) =0, \forall \zeta \in V_0 \}$ corresponds to the first  bifurcation load, the load for which there exist (multiple) equilibrium curves intersecting the homogeneous branch. As a consequence, for $t\geq t_b$ there is the possibility of bifurcating away from homogeneous branch. The study of the bifurcation problem is functional to infer a partial response on the stability of the state. Indeed, if the current equilibrium branch is unique then the current state is necessarily stable. The converse is not true, as the existence  possible of bifurcation paths is not a sufficient condition to ensure or exclude the stability of the current state.
-
-\added[id=ALB]{
-The question of the stability of the homogeneous solution in the irreversible case, according to our energetic viewpoint, is governed by the positivity of $\delta^2 \Psi(y_t)$ on the constrained space of admissible state perturbations $K^+_0$.
-% , yet the converse is not true.
-Denoting $t_s$ the load at which the homogeneous solution looses stability by analogy to the bifurcation load, namely $t_s: = \inf_t \{\delta^2 \Psi(y_t)(\zeta, \zeta) =0, \forall \zeta \in K^+_0 \}$, the set inclusion $K^+_0 \subseteq V_0$ implies that necessarily $t_b \leq t_s$.
-}
-\added[id=ALB]{
-This indicates a qualitative conceptual distinction between the bifurcation and the stability thresholds in the constrained case. As a consequence, a system can persist along a critical non-unique equilibrium branch, yet be stable. 
-A sufficient condition for the stability of the homogeneous state $y_h$ is given by the strict positivity  of the Hessian form, on the constrained space of admissible perturbations, namely
-}
-% As a straightforward consequence,  
-% Indeed, the critical load for loss of stability is conceptually different from the critical load at which the uniqueness of the (rate) response is lost, they are determined by two different problems which can be related by a (singular) asymptotic process.
-\begin{equation}
-     \label{eq:variational_stability}
-     \delta^2 \Psi(y_h)(\zeta - y_h,  \zeta - y_h)  > 0, \quad \forall \zeta-y_h \in K^+_{0}
- \end{equation}
-The variational ineqality above is a constrained eigenvalue problem that allows to characterise the stability of $y_h$. Its solution yields either a positive eigenpair $(\lambda, w^*)\in \mathbb{R}^+\times K^+_0$ as a sufficient condition for the stability of current state, or a pair $(\kappa, z^*)\in \mathbb{R}^-\times K^+_0$ where $\kappa$ is the local (negative) energy curvature and $z^*$, indicating the direction of maximum energy decrease, is interpreted as the \emph{instability mode} which points the system towards an optimal direction of energy descent. 
-From the numerical standpoint, the bifurcation eigen-problem in the vector space~\eqref{eq:variational_bifurcation} may be also discretised as an approximated version of the stability problem, in the time-discrete setting. As suggested in~\cite{Baldelli2021-gc} through the notion of `incremental-stability', the irreversibility constraint in the stability problem can be relaxed to a pointwise inequality with respect to the previous time-step. As a consequence, assuming that $\alpha_t$ solves first order optimality conditions at $t$ and that $\alpha_-$ is the solution at the previous load step, the set of admissible perturbations for the second order problem~\eqref{eq:variational_stability} can be expanded to include all (smooth) functions $\beta$ which cancel the first order term, without restriction on the sign provided that $\alpha_t(x) + \beta(x) \geq \alpha_-(x)$ for all $x\in (0, 1)$.
-% 
-% $\alpha$ is admissible at $t$ only if $\alpha \in H^1((0, 1))$ and $\alpha \geq \alpha_{-}$ where $\alpha_{-}$ is the damage state at the previous load step. 
-In this way, the space of perturbation allows for (small) perturbations $\beta$ which can be negative where $\alpha_t(x)>\alpha_-(x)$. Despite the constraint, such space is still a vector space, and the stability problem can be solved by standard methods of linear algebra.
-% Consequently, without modyfing the vector structure space of perturbations.
 
 \section{Model: thin film  on {a compliant} substrate }
-\label{sec:non-rigid}
-Now, we examine a scenario where the foundation is not entirely rigid and can undergo non-uniform deformations. The energy functional of the second model incorporates an extra term describing the elasticity of the substrate. \added[id=ALB]{Here the state of the system is identified by the triplet $(u, \alpha, u_s)=: y$.}, the energy is defined as follows
-\begin{equation}
-\label{model_elastic_substrate}
-\widetilde{\Psi}(\alpha, u,u_s) = \int_{0}^1 \left[ \frac{1}{2} \ g(\alpha)(u')^2 + h(\alpha) + \frac{\lambda_1^2}{2}(\alpha')^2 
-+ \frac{1}{2 \lambda_2^2} (u-u_s)^2 
-+ \frac{r_{s}}{2}  \epsilon_{\rm s}^2 \right] dx,
-\end{equation}
-where $r_{\rm s}$\comment[id=ALB]{check notation} is the ratio between elastic constants of substrate and thin film and $u_s$ is the displacement field on the deformable non-breakable substrate with $\epsilon_{\rm s}=u_s'(x)$ represents the deformation field of the elastic foundation. We  choose boundary conditions in the form: $u(0)=-\bar\epsilon/2$, $u(1)=\bar\epsilon/2$,  $u_s(0)=-\bar\epsilon/2$, $u_s(1)=\bar\epsilon/2$ and, $\alpha'(0)=\alpha'(1)=0$. 
 
-The first variation of the energy functional is given by
-\begin{equation}
-\delta \Psi(u,\alpha,u_s)(v,w,z)=\int_0^1 [(1-\alpha)^2u'v'+\frac{1}{\lambda_2^2} (u-u_s) v-\frac{1}{\lambda_2^2} (u-u_s) z+r_su'_sz'+\frac{1}{2}u'^2 (g'(\alpha)+h'(\alpha))w+\lambda_1^2\alpha'w' ]dx,\label{firstvar}
-\end{equation}
-where $v$, $w$ and $z$ are  test functions. The Euler-Lagrange equations read
-\begin{eqnarray}\label{modeld_el_1}
-\begin{cases}
-  2(1-\alpha)\alpha' u' +(1-\alpha)^2 u'' -  \frac{1}{\lambda_2^2}(u-u^s) &= 0, \\
-  -\lambda_1^2\alpha'' - (1-\alpha)( u')^2 + 2\alpha   &= 0,\\
-    r_su_s''  +  \frac{1}{\lambda_2^2}(u-u^s) &= 0. \\
-\end{cases}
-\label{auto2}
-\end{eqnarray}
-It is easy to show that the homogeneous solution on the trivial branch remains the same as in the case of the rigid substrate, that is $\alpha_h = \frac{\bar{\epsilon}^2}{2 + \bar{\epsilon}^2}\label{eq:homo11}$, whereas the effective elastic energy along the homogeneous branch now reads $\widetilde \Psi_h(\bar{\epsilon}) = \frac{\bar{\epsilon}^2}{2 + \bar{\epsilon}^2} + \frac{r_s}{2}\bar{\epsilon}^2$.\comment[id=ALB]{why there is no damage part?, CHECK} 
 
 \subsection{Linear stability}
-We once more seek the incremental stability of an equilibrium configuration $y_t := (u, \alpha, u_s)_t$ which satisfying that the first order condition $\delta \Psi(u,\alpha,u_s)\added[id=ALB]{(y-y_t)}=0$ \added[id=ALB]{for all admissible $y$} by examining the positivity of the second variation, namely
-\begin{equation*}
-\delta^2 \widetilde\Psi(u,\alpha,u_s)(v,w,z)(v,w,z)>0, \qquad \forall (v,w,z)\in \widetilde V_0,
-\end{equation*}The second variation is given by the following bilinear form 
-\begin{equation}
-\delta^2 \Psi(u,\alpha,u_s)(v,w,z)(v,w,z)=\int_0^1 \left[(1-\alpha)^2v'^2 
-%+ \lambda_2^{-2}v^2
-- 4(1-\alpha)u' v'w+(2+ u'^2)w^2+\lambda_1^2w'^2 +\frac{1}{\lambda_2^2} v^2 -\frac{1}{\lambda_2^2} z^2+r_sz'^2\right]dx.\label{hessian222}\end{equation}
-We again proceed to extract information on the onset of instability expanding in Fourier series the fields $v$, $w$ and $z$ appearing in \eqref{hessian222} such that $v(x)=\sum_{n=1}^{\infty} a_{n} \sin \left(n \pi x+\phi_{n}\right), \quad w(x)=\sum_{n=1}^{\infty} b_{n} \cos \left(n \pi x+\psi_{n}\right),\quad z(x)=\sum_{n=1}^{\infty} c_{n} \sin \left(n \pi x+\theta_{n}\right)$\comment[id=ALB]{check notation}. Exactly as in the previous section, we claim that, whenever the first order term vanishes, the system is stable only if $\delta^2 \Psi(u,\alpha,u_s)(v,w,z)(v,w,z)>0$ for all sufficiently smooth admissible test fields $(v, w, z)$. The stability condition  takes the form
-\begin{align}\left[ a_n \quad b_n \quad c_n  \right] \mathcal{H} \left[ \begin{array}{c} a_n \\ b_n  \\ c_n\end{array} \right]=\left[ a_n \quad b_n \quad c_n \right]\left(
-\begin{array}{ccc}
-g(\alpha)(n\pi)^2+\lambda_2^{-2}& \frac{\partial g}{\partial \alpha}\bar\epsilon(n\pi) &  -\lambda_2^{-2} \\
-\frac{\partial g}{\partial \alpha}\bar\epsilon(n\pi) & \frac{\partial g^2}{\partial \alpha^2}\bar\epsilon^2+ \frac{\partial h^2}{\partial \alpha^2}+\lambda_1^2(n\pi)^2 & 0 \\
- -\lambda_2^{-2} & 0 & \lambda_2^{-2} +r_s(n\pi)^2\\
-\end{array}
-\right)\left[ \begin{array}{c} a_n \\ b_n \\c_n \end{array} \right]>0.\label{hessian3}\end{align}
-By substituting the homogeneous solution $\alpha_h$ into \eqref{hessian3}, we compute $\det \mathcal{H}$, as depicted  in Fig. \ref{fig:hessian1}(b). The calculations are performed for the parameter values \replaced[id=ALB]{$\lambda_1=0.16$}{$\lambda_1=0.158114$}, $\lambda_2=0.34$ and $r_s=0.5$.  In Fig. \ref{fig:hessian1}(b), we again observe the formation of closed loops and a re-entry behavior of the affine configuration is discernible, marked by the emergence of two critical strains denoted as $\bar\epsilon^*$ and $\bar\epsilon^{**}$, representing the lower and upper stability limits for the homogeneous state. These critical points are highlighted by red and green dots in Fig. \ref{fig:hessian1}(b). The critical wavenumber $n_c$ for the lower limit $n_c(\bar{\epsilon}^*)$    differs from the critical wavenumber for the upper limit $n_c(\bar{\epsilon}^{**})$. The overall behavior of the system remains the same while the first critical wavenumber $n_c=2$ is now smaller suggesting a different number of cracks will appear during the loading history.
